# Raytracing-SoC024

./: .gitignore  Makefile  README.md
image_collection/: image10.ppm  image11.ppm  image12.ppm  image13.ppm  image14.ppm  image15.ppm  image16.ppm  image17.ppm  image2.ppm  image3.ppm  image4.ppm  image5.ppm  image6.ppm  image7.ppm  image8-5.ppm  image8-51.ppm  image8.ppm  image9.ppm
include/: camera.h  color.h  hittable.h  include_these.h  interval.h  material.h  ray.h  utils.h  vecops.h
lib/: color.cpp  vecops.cpp
src/: CMakeLists.txt  basic-example-1.cpp  image.ppm  main.cpp
